# uMediator

./: CMakeLists.txt  LICENSE
include/: IRequest.h  IRequestHandler.h  Mediator.h  RegisterHandler.h  StaticDispatcher.h
include/uMediator/: uMediator.h
include/uMediator/internal/: IRequest.h  IRequestHandler.h  Mediator.h  RegisterHandler.h  StaticDispatcher.h
